--- a/menuinicial.html
+++ b/menuinicial.html
@@ -13,11 +13,20 @@
      </form>
    </div>
 
-   <div id="Search" > 
+   <!--<div id="Search" > 
     <form action="login.php" method="post"> 
    <input type="submit" name="Search Poll" value="Search Poll"></button>
-  </form>
-</div>
+   </form>
+    </div>-->
+
+    <li class="search">
+    <input type="checkbox" name="item" id="item1" />   
+    <ul class="options">
+      <li><a href="#"><i aria-hidden="true" class="user-search"></i> By user</a></li>
+      <li><a href="#"><i aria-hidden="true" class="word-search"></i> By word</a></li>
+      <li><a href="#"><i aria-hidden="true" class="id-search"></i> By id</a></li>
+    </ul>
+  </li>
 
 <div id="List" > 
     <form action="login.php" method="post"> 
