Apaguei ficheiros desnecessários/Criação do php para as polls

--- a/createpoll.html
+++ b/createpoll.html
@@ -30,6 +30,7 @@
      <script> addInput('dynamicInput'); </script>
      <div id="add">
      <input type="button" value="Add another text input" onClick="addInput('dynamicInput');">
+     <input type="button" value="Delete last text input" onClick="deleteInput('dynamicInput');">
  </div>
 </form>
 </body>
