--- a/menuinicial.html
+++ b/menuinicial.html
@@ -6,45 +6,53 @@
   <link rel="shortcut icon" href="images/signup.jpg">
 </head>
 <body>
-  <ul class="menu">
-    <div id="Create" > 
-    <form action="createpoll.html" method="post">
-    <input type="submit" name="Create Poll" value="Create Poll"></button>
-     </form>
-   </div>
 
-   <!--<div id="Search" > 
-    <form action="login.php" method="post"> 
-   <input type="submit" name="Search Poll" value="Search Poll"></button>
-   </form>
-    </div>-->
-
-    <li class="search">
-    <input type="checkbox" name="item" id="item1" />   
-    <ul class="options">
-      <li><a href="#"><i aria-hidden="true" class="user-search"></i> By user</a></li>
-      <li><a href="#"><i aria-hidden="true" class="word-search"></i> By word</a></li>
-      <li><a href="#"><i aria-hidden="true" class="id-search"></i> By id</a></li>
-    </ul>
-  </li>
-
-<div id="List" > 
-    <form action="login.php" method="post"> 
-    <input type="submit" name="List Polls" value="List Polls"></button>
-  </form>
+  <div id="fb-root">
+    <script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+    </script>
 </div>
+  <div class="toolBar">
+    <div class="toolWrap">
+        <div id="logo"></div>
+        <nav>
+            <ul>
+                <li><a href="createpoll.html">Create a Poll</a></li>
+                <li><a href="#">Search a Poll</a>
 
-<div id="AboutUs" > 
-    <form action="login.php" method="post"> 
-    <input type="submit" name="About us" value="About Us"></button>
-  </form>
+                    <ul>
+                        <li><a href="#">By ID</a>
+                        </li>
+                        <li><a href="#">By User</a>
+                        </li>
+                        <li><a href="#">By a key word</a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="signin.html">List all Polls</a>
+                </li>
+                <li><a href="signin.html">Logout</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="aboutus">
+      <h1> About Us </h1> <br>
+      <p> Faculdade de Engenharia da Universidade do Porto </p> <br>
+      <p> Projecto de Ltw 2014/2015 </p> <br>
+      <p> Turma 3</p> <br>
+      <p> Desenvolvido por: </p> <br>
+      <p> Andre Regado </p> <br>
+      <p> Francisco Couto </p> <br>
+      <p> Mario Ferreira </p>
+    </div>
+    <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count"></div>
 </div>
-
-<div id="logout" > 
-    <form action="logout.php" method="post"> 
-    <input type="submit" name="Logout" value="Logout"></button>
-  </form>
-  </div>
-  </ul>
+ 
 </body>
 </html>
