--- a/createpoll.html
+++ b/createpoll.html
@@ -8,7 +8,7 @@
 
 <body>
 
-      <script src="addInput.js" language="Javascript" type="text/javascript"></script>
+    <script src="addInput.js" language="Javascript" type="text/javascript"></script>
    <div class="Titulo">
         <p>Enjoy Creating</p>
         <b>
@@ -20,9 +20,12 @@
         </b>
     </div>
 
-<form method="POST">
+<form method="POST" action="createpoll.php">
     <div id="Questions">
      <br><input type="text" name="question" placeholder="Insert your question here..." required>
+ </div>
+ <div id="Image">
+     <br><input type="text" name="image" placeholder="Insert your image url here..." required>
  </div>
      <div id="dynamicInput">
           <br><input type="text" name="myInputs[]" placeholder="Insert an answer here..." required>
@@ -32,6 +35,7 @@
      <input type="button" value="Add another text input" onClick="addInput('dynamicInput');">
      <input type="button" value="Delete last text input" onClick="deleteInput('dynamicInput');">
  </div>
+   <input type="submit" class="submit" value="Submit the poll!">
 </form>
 </body>
 </html>
