Criou-se as files para pesquisar por ID etc, mas falta fazer as funções...

--- a/menuinicial.html
+++ b/menuinicial.html
@@ -23,20 +23,21 @@
         <nav>
             <ul>
                 <li><a href="createpoll.html">Create a Poll</a></li>
-                <li><a href="#">Search a Poll</a>
+
+                <li><a href="">Search a Poll</a>
 
                     <ul>
-                        <li><a href="#">By ID</a>
+                        <li><a href="idSearch.html">By ID</a>
                         </li>
-                        <li><a href="#">By User</a>
+                        <li><a href="nameSearch.html">By User</a>
                         </li>
-                        <li><a href="#">By a key word</a>
+                        <li><a href="wordSearch.html">By a key word</a>
                         </li>
                     </ul>
                 </li>
-                <li><a href="signin.html">List all Polls</a>
+                <li><a href="listapoll.html">List all Polls</a>
                 </li>
-                <li><a href="signin.html">Logout</a>
+                <li><a href="logout.php">Logout</a>
                 </li>
             </ul>
         </nav>
