Save com private e idUser completo. Listar só as public completo. Opção de por private done.

--- a/createpoll.html
+++ b/createpoll.html
@@ -25,6 +25,9 @@
 </ul>
 
 <form method="POST" action="createpoll.php">
+<div id="Private">
+<input type="checkbox" name="privacy" value="on"> Is your Poll private? <br>
+</div>
     <div id="Questions">
      <br><input type="text" name="question" placeholder="Insert your question here..." required>
  </div>
